add secret token

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           cd Downloads
           echo 'aplha' > alpha.html
+          echo ${{secrets.JENKINS_TOKEN}}
           cd ..
         
       - name: Use the Upload Artifact github upload action
